# podmemory

./: CHANGELOG.md  DEEP.md  Dockerfile  MEMORY.md  Makefile  README.md  pyproject.toml
src/podmemory/: main.py
src/podmemory/api/: analyze.py
src/podmemory/core/: config.py
src/podmemory/schemas/: analysis.py
src/podmemory/services/: analyzer.py  audio_transcript.py  text_extract.py  transcript.py
src/podmemory/static/: index.html  manifest.json
tests/: conftest.py  test_integration.py  test_smoke.py
